# DiaROS_imamoto

./: .gitignore  CLAUDE.md  DiaROS_deep_model_root_in_torch_requirements.txt  README.md  README_en.md  README_jp.md  conda_DiaROS_deep_model_root_pip_requirements.txt  diaros.code-workspace  model_input_sound.raw  requirements.txt
.devcontainer/: devcontainer.json
DiaROS_py/: README.md  pyproject.toml  setup.py
DiaROS_py/diaros/: acousticAnalysis.py  automaticSpeechRecognition.py  backChannel copy.py  backChannel.py  backChannel_cli.py  device_utils.py  dialogManagement.py  googleSpeechAPI.py  model_input_sound.raw  naturalLanguageGeneration.py  responseControl.py  speechInput.py  speechSynthesis.py  suppress_alsa.py  timestamp_display.py  turnTaking copy.py  turnTaking.py
DiaROS_py/diaros.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
DiaROS_py/diaros/install/: local_setup.sh  setup.sh
DiaROS_ros/: check_pyaudio.py  conda_DiaROS_20250331_environment.yml  conda_DiaROS_imported_20250331_environment.yml  data.json  demo_conda_DiaROS_deep_model_root_20250331.yml  environment.yml  model_input_sound.raw  requirements.txt  static_response_shuffle.py
DiaROS_ros/src/diaros_package/: package.xml  setup.cfg  setup.py
DiaROS_ros/src/diaros_package/diaros_package/: listener.py  ros2_acoustic_analysis.py  ros2_automatic_speech_recognition.py  ros2_back_channel.py  ros2_dialog_management.py  ros2_dm_archive.py  ros2_dr.py  ros2_natural_language_generation.py  ros2_natural_language_understanding.py  ros2_sm.py  ros2_speech_input.py  ros2_speech_synthesis.py  ros2_time_listener.py  ros2_turn_taking.py  testModule.py
DiaROS_ros/src/diaros_package/launch/: sdsmod.launch.py  test.launch.py
config/: audio_device.conf  launch_diaros_with_mic.sh  performance_config.yaml
dialogue-dashboard/: README.md  package-lock.json  package.json  tsconfig.json  vue.config.js
docs/: implementation_summary_20240629.md  implementation_summary_20250629.md  macos_aubio_build_fix.md  macos_native_setup.md  macos_pixi_complete_guide.md  macos_pixi_ros2_setup.md  macos_quick_start.md  monitoring_guide.md
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: docker_audio_setup.sh  monitor.sh  pixi_diaros_quick_start.sh  run_diaros_native_macos.py  set_default_mic.py  setup_pixi_ros2.sh  start_diaros.sh  (+2 more)
(+343 files in other folders)
